--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <!-- Seo -->
-{% block title %} Lillehammer Tjenester - Enkelt og grei løsning {% endblock %}
+<title>{% block title %} Lillehammer Tjenester - Enkelt og grei løsning {% endblock title %}</title>
 
 
 <meta name="description" content="Hjemmesiden til Lillehammer Tjenester - Finn den tjensten du leter etter enkelt og greit">
