--- a/apps/core/templates/pages/about/about.html
+++ b/apps/core/templates/pages/about/about.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-{% block title %} Om Lillehamemr Tjenester {% endblock %}
+<title>{% block title %} Om Lillehammer Tjenester {% endblock title %}</title>
 
 
 <link rel="stylesheet" href="{% static '/scss/page/about.css' %}" type="text/css">
