--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-{% block title %}Alle tjenestene{% endblock %}
+<title>{% block title %}Alle tjenestene{% endblock title %}</title>
 
 
 <link rel="stylesheet" href="{% static '/scss/page/all-pr.css' %}" type="text/css">
