--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -11,7 +11,7 @@
 <meta name="keywords" content="{{product.seo}}, Lillehammer Tjenester, Lillehamemr, Tjenester">
 <meta name="title" property="og:title" content="{{product.name}} | {{product.business_name}}">
 <meta property="og:title" content="{{product.name}}">
-{% block title %}{{product.name}} | {{product.business_name}} - Lillehammer Tjenester{% endblock %}
+<title>{% block title %}{{product.name}} | {{product.business_name}} - Lillehammer Tjenester{% endblock %}</title>
 <title>{{product.name}} | {{product.business_name}} - Lillehammer Tjenester</title>
 <meta property="og:type" content="website">
 <meta property="og:url" content="{{ request.get_full_path }}">
