--- a/apps/core/templates/pages/business/business.html
+++ b/apps/core/templates/pages/business/business.html
@@ -3,6 +3,15 @@
 
 
 {% block content %}
+<!-- Seo -->
+<title>{% block title %} For bedrifter {% endblock title %}</title>
+<meta name="author" content="Lillehamemer Tjenester">
+<meta name="keywords" content="For bedrifter, Lillehammer, Fåberg, Øyer, Tretten, Vingrom, Tjenester i Lillehammer, Tjenester i Fåberg, Tjenester i Øyer, Tjenester i Tretten, Tjenester i Vingrom, Lillehammer Tjenester">
+<meta name="title" property="og:title" content="For bedrifter">
+<meta property="og:title" content="For bedrifter">
+<meta property="og:type" content="website">
+<meta property="og:url" content="{{ request.get_full_path }}">
+
 <link rel="stylesheet" href="{% static '/scss/page/business.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/business.js' %}" type="text/javascript"></script>
