--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -21,7 +21,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimal-ui">
 
-    <title>{% block title %}Lillehammer Tjenester - Enkelt og grei løsning{% endblock title %}</title>
+    {% block head %}
+    {% endblock %}
+    <title>Lillehammer Tjenester - Enkelt og grei løsning</title>
     <base href="/">
     <meta name="theme-color" content="#ffffff">
 
