--- a/apps/core/templates/pages/all-pr/all-pr.html
+++ b/apps/core/templates/pages/all-pr/all-pr.html
@@ -3,7 +3,8 @@
 
 
 {% block content %}
-<title>{% block title %}Alle tjenestene{% endblock title %}</title>
+<title>Alle tjenestene</title>
+<meta name="author" content="Lillehamemer Tjenester">
 <meta name="keywords" content="Alle tjenestene, Lillehammer, Fåberg, Øyer, Tretten, Vingrom, Tjenester i Lillehammer, Tjenester i Fåberg, Tjenester i Øyer, Tjenester i Tretten, Tjenester i Vingrom, Lillehammer Tjenester">
 <meta name="title" property="og:title" content="Alle tjenestene">
 <meta property="og:title" content="Alle tjenestene">
