--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -18,7 +18,6 @@
 <!-- Links and scripts -->
 <link rel="stylesheet" href="{% static '/scss/store/base.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/home.js' %}" type="text/javascript"></script>
-<script rel="stylesheet" src="{% static '/js/scroll.js' %}" type="text/javascript"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Sniglet&display=swap" rel="stylesheet">
@@ -35,7 +34,7 @@
 <!-- Cover -->
 <div class="cover">
    <div class="width">
-      <img src="{% static 'images/covers/cover-main.jpg' %}" alt="" class="cover-img-lillehammer">
+      <img src="{% static 'images/covers/cover-main.jpg' %}" alt="cover image Lillehammer Tjenester" class="cover-img-lillehammer">
       <div class="content" id="coverContent">
          <div class="text">
             <h1 class="cover-heading">Finn den tjenesten du trenger i Lillehammer</h1>
@@ -64,7 +63,7 @@
       <div class="services-cards">
          {% for product in products %}
          <div class="service" onclick="window.location.href='{% url  'product_detail' product.slug  %}'">
-            <img src="{{product.image1.url}}" alt="" class="service-image">
+            <img src="{{product.image1.url}}" alt=" " class="service-image">
             <div class="reviews">
                {% if product.get_rating %}
                <p><i class="fa-solid fa-star"></i>{{product.get_rating|floatformat:0}}</p><span>({{product.reviews.all.count}})</span>
