--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -34,33 +34,33 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="product-image" src="{{product.image1.url}}" alt="product image1">
+                <img class="product-image" src="{{product.image1.url}}" alt="{{product.name}}  image1">
               </div>
               {% if product.image2 %}
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image2.url}}" alt="product image2">
+                <img class="product-image" src="{{product.image2.url}}" alt="{{product.name}}  image2">
               </div>
               {% endif %}
               {% if product.image3 %}
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image3.url}}" alt="product image3">
+                <img class="product-image" src="{{product.image3.url}}" alt="{{product.name}}  image3">
               </div>
               {% else %}
               as
               {% endif %}
               {% if product.image4 %}
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image4.url}}" alt="product image4">
+                <img class="product-image" src="{{product.image4.url}}" alt="{{product.name}}  image4">
               </div>
               {% endif %}
               {% if product.image5 %}
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image5.url}}" alt="product image5">
+                <img class="product-image" src="{{product.image5.url}}" alt="{{product.name}}  image5">
               </div>
               {% endif %}
               {% if product.image6 %}
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image6.url}}" alt="product image6">
+                <img class="product-image" src="{{product.image6.url}}" alt="{{product.name}}  image6">
               </div>
               {% endif %}
             </div>
