--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -12,6 +12,7 @@ html, body {
   scroll-behavior: smooth;
   margin: auto;
   background: rgb(247, 247, 247) !important;
+  max-width: 1280px !important;
 }
 
 .section, .page {
