--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -18,6 +18,7 @@ html, body {
   scroll-behavior: smooth;
   margin: auto;
   background:  rgb(247,247,247) !important;
+  max-width: 1280px !important;
 }
 
 
